# visualis

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: examples.yml
docs/: CMakeLists.txt  Doxyfile
docs/pages/: about.dox
examples/: CMakeLists.txt
examples/src/: main.cpp
include/Visualis/: Core.h  GrApp.h  IQParser.h  MainFrame.h  Visualis.h
src/: GrApp.cpp  IQParser.cpp  MainFrame.cpp  Visualis.cpp
test/: CMakeLists.txt
test/src/: Visualis.cpp
